# project_silva

./: .gitignore  Cargo.toml
assets/: spider_creature_rigged.glb
assets/shaders/: normal_visualizer.wgsl
src/: animation.rs  animation_extensions.rs  camera.rs  debug.rs  enemy.rs  input.rs  main.rs  movement.rs  player.rs  test_scene.rs  texture_tiling.rs
