[package]
name = "project_silva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.7.0", features = ["dynamic"] }
# bevy = { git = "https://github.com/bevyengine/bevy" }
bevy = { git = "https://github.com/Bendzae/bevy-fork.git", branch = "local-0-8-release" }
# bevy-inspector-egui = "0.11.0"
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui.git", branch = "bevy-main" }
bevy-inspector-egui = { git = "https://github.com/Sheepyhead/bevy-inspector-egui.git", branch = "bevy-0.8" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3